fixed 3ds file extensions

--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -108,14 +108,14 @@ coded with love by des
 			<img src="/blog/2025/summer-trip/0805-nintendo-world-3ds (11).jpg" alt="florida trip pictures from my 3ds">
 			<img src="/blog/2025/summer-trip/0805-nintendo-world-3ds (2).jpg" alt="florida trip pictures from my 3ds">
 			<img src="/blog/2025/summer-trip/0805-nintendo-world-3ds (4).jpg" alt="florida trip pictures from my 3ds">
-			<img src="!g/250730-florida-trip-3ds (1).JPG" alt="florida trip pictures from my 3ds">
-			<img src="!g/250730-florida-trip-3ds (2).JPG" alt="florida trip pictures from my 3ds">
-			<img src="!g/250730-florida-trip-3ds (3).JPG" alt="florida trip pictures from my 3ds">
-			<img src="!g/250730-florida-trip-3ds (4).JPG" alt="florida trip pictures from my 3ds">
-			<img src="!g/250730-florida-trip-3ds (5).JPG" alt="florida trip pictures from my 3ds">
-			<img src="!g/250730-florida-trip-3ds (6).JPG" alt="florida trip pictures from my 3ds">
-			<img src="!g/250730-florida-trip-3ds (7).JPG" alt="florida trip pictures from my 3ds">
-			<img src="!g/250730-florida-trip-3ds (8).JPG" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (1).jpg" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (2).jpg" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (3).jpg" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (4).jpg" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (5).jpg" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (6).jpg" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (7).jpg" alt="florida trip pictures from my 3ds">
+			<img src="!g/250730-florida-trip-3ds (8).jpg" alt="florida trip pictures from my 3ds">
 			<div class="hov">
 				<p class="caption">
 					3ds pics from my florida trip :p most of them are from super nintendo world lol <br> <b>taken throughout august 2025</b></p>
