updated style savvy page

--- a/doqmeat/vgs/games/style-savvy-styling-star/index.html
+++ b/doqmeat/vgs/games/style-savvy-styling-star/index.html
@@ -47,6 +47,26 @@
 		<nav class="info"><b>navigation:</b> <a href="#logs">logs</a>, <a href="#screenshots">screenshots</a></nav>
 
 		<h3>logs</h3>
+		<p><span class="date">13.aug.25</span> was playing the hell out of this game while on my <a href="/blog/2025/summer-trip/index.html" target="_blank">trip</a>. i've grown a lot to the characters here tbh. it's a more lively game than <a href="../style-savvy-trendsetters/index.html">trendsetters</a> </p>
+		<figure>
+			<img src="250810 (1).JPG" alt="in-game screenshot" width="48%">
+			<img src="250810 (3).JPG" alt="in-game screenshot" width="48%">
+			<img src="250810 (2).JPG" alt="in-game screenshot" width="48%">
+			<img src="250810 (10).JPG" alt="in-game screenshot" width="48%">
+			<img src="250810 (5).JPG" alt="in-game screenshot" width="48%">
+			<img src="250810 (6).JPG" alt="in-game screenshot" width="48%">
+			<img src="250810 (8).JPG" alt="in-game screenshot" width="48%">
+			<img src="250810 (9).JPG" alt="in-game screenshot" width="48%">
+			<img src="250810 (11).JPG" alt="in-game screenshot" width="48%">
+			<img src="250810 (12).JPG" alt="in-game screenshot" width="48%">
+			<figcaption>some cute moments in-game</figcaption>
+		</figure>
+		<figure>
+			<img src="250810-rosies-cow-saga (1).bmp" alt="rosie and her cow pictures" width="48%">
+			<img src="250810-rosies-cow-saga (2).bmp" alt="rosie and her cow pictures" width="48%">
+			<figcaption>rosie and her cows never fails to make me laugh</figcaption>
+		</figure>
+		<hr>
 		<p><span class="date">07.jan.25</span> i honestly don't really know what all my bitching was about. new year, new me. learning to forgive and love. been trying to collect all clothing items from <i>stagedive</i> in all 4 games (yes i'm also playing the DS <i>style savvy</i> game <small>need to figure out where the fuck the screenshots from the NDS emulator are located...</small>)</p>
 		<center>
 			<img src="250107 (3).JPG" alt="in-game screenshot" style="max-width:100%;">
