--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -51,6 +51,7 @@
 		<h2>changelog</h2>
 
 		<div id="log">
+			<li>13.aug.25: log <a href="games/style-savvy-styling-star/index.html">style savvy styling star</a></li>
 			<li>20.jul.25: log <a href="games/infinity-nikki/index.html">infinity nikki</a></li>
 			<li>24.jun.25: log <a href="games/bloodborne/index.html">bloodborne</a> + <a href="games/infinity-nikki/index.html">infinity nikki</a> + new: <a href="games/infamous-1st-light/index.html">infamous first light</a></li>
 			<li>20.jun.25: log <a href="games/bloodborne/index.html">bloodborne</a></li>
