made faq wayyy tidier

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -164,11 +164,11 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<p><span class="title">playing: </span> style savvy: styling star</p>
-					<p><span class="title">watching: </span> the summer hikaru died, wednesday</p>
+					<p><span class="title">playing: </span> style savvy: styling star, overwatch 2, paranormasight</p>
+					<p><span class="title">watching: </span> the summer hikaru died</p>
 					<p><span class="title">reading: </span> <a href="https://javascript.info/" target="_blank" class="outlink">the modern javascript tutorial</a></p>
 					<p><span class="title">working on: </span> getting ready to start a new uni semester!</p>
-					<p class="date">last updated: 12.aug.25</p>
+					<p class="date">last updated: 15.aug.25</p>
 				</section>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
@@ -327,7 +327,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 		</aside>
 		<footer class="box">
 			<p><img title="doqmeat.com protected by nyan cat" src="!g/pix/nyancat.gif" alt="nyan cat"></p>
-			<p><a href="info/index.html#homepage-credit">credit</a> for materials used / coded with <img title="LOVE!" src="!g/pix/heart-paper.gif" alt="love"> by <b>des</b> / on the web since <b>11.apr.23</b> / <a title="e-mail me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">e-mail</a></p>
+			<p><a href="info/index.html#homepage-credit">credit</a> for materials used / coded with <img title="LOVE!" src="!g/pix/heart-paper.gif" alt="love"> by <b>des</b> / on the web since <b>11.apr.23</b> / <a title="for questions do check out my FAQ first!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;" target="_blank">e-mail</a></p>
 			<a title="link to rosemary's free palestine page full of great resources on how to know and help the people of palestine" href="https://hillhouse.neocities.org/journal/notes/palestine" target="_blank"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
 			<img src="/collection/internet-graphics/!g/notforchildren.jpg" alt="not intended for children">
 			<img src="/collection/internet-graphics/!g/transrights.png" alt="trans rights now!">
