--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -77,6 +77,9 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>18.aug.25 - 10pm</b> been feeling a little bit weird lately... ah maybe i am a little bit nervous about starting a new semester. me the person that loves going to class... i really need to do more scary things. or at least things that *i* find scary to do. i haven't touched <a href="/vgs/games/bloodborne/index.html">bloodborne</a> in such a while and truth is that i got a bit scared of it ?!?! i would be so unstoppable if i wasn't like this. but i am like this nonetheless! just something i gotta work on. hopefully this new semester i will also work on my public speaking skills as well!</p>
+				</article>
+				<article>
 					<p><b>12.aug.25 - 4pm</b> THE PERSON THAT i bought the camera from never shipped it for some damn reason (their account has good reviews?) and just now the order got cancelled... good bye dream camera. you were literally the perfect color as well. well at least i got my money back.</p>
 				</article>
 				<article>
