added cds issue to footer

--- a/doqmeat/music/cds/index.html
+++ b/doqmeat/music/cds/index.html
@@ -109,7 +109,7 @@
 		</div>
 
 		<div class="cd">
-			<img src="pics/oohyo-silence.png" alt="" class="disk-spin">
+			<img src="pics/oohyo-silence.png" alt="oohyo silence cd" class="disk-spin">
 			<img class="cover" src="pics/oohyo-silence.jpg">
 			<div class="hov">
 				<div class="caption">
@@ -120,7 +120,8 @@
 			</div>
 		</div>
 
-		<div class="cd"><img class="cover" src="pics/declanmckenna-wdytatc.jpg">
+		<div class="cd">
+			<img class="cover" src="pics/declanmckenna-wdytatc.jpg">
 			<div class="hov">
 				<div class="caption">
 					<h3>what do you think about the car? - declan mckenna</h3>
@@ -508,6 +509,8 @@
 		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 06.jul.25</b>
 		<br>
 		<b>credit:</b> background is from yukika's soul lady photobook! / <a href="/notebook/resources/fonts.html">fonts</a> used: natsuzemi, gaegu, spirit
+		<br>
+		<b>known bugs:</b> <a href="https://github.com/doqmeat/doqmeat.com/issues/71" target="_blank">chrome only issue</a>
 		<br>
 		<a href="#">top</a> <img src="/!g/pix/musicnote1.gif"> <a href="/">home</a> <img src="/!g/pix/musicnote1.gif"> <a href="/music">music</a> <img src="/!g/pix/musicnote1.gif"> <a href="fav-albums.html">fav albums</a> <img src="/!g/pix/musicnote1.gif"> <a href="/collection/index.html">collection</a> <img src="/!g/pix/musicnote1.gif"> <a href="/sitemap">sitemap</a>
 	</footer>
