--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -53,7 +53,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 		<aside id="music" class="box">
 			<div id="screen">
 				<p>last listened to...</p>
-				<p id="album"></p>
+				<p id="album">loading...</p>
 				<p id="song"><span class="icons">🎵</span> </p>
 				<p id="artist"><span class="icons">👤</span> </p>
 				<p id="albumname"><span class="icons">🖼️</span> </p>
@@ -164,12 +164,13 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<p><span class="title">playing: </span> style savvy: styling star, overwatch 2, paranormasight</p>
-					<p><span class="title">watching: </span> the summer hikaru died</p>
-					<p><span class="title">reading: </span> <a href="https://javascript.info/" target="_blank" class="outlink">the modern javascript tutorial</a></p>
-					<p><span class="title">working on: </span> getting ready to start a new uni semester!</p>
-					<p class="date">last updated: 15.aug.25</p>
+					<p><span class="title">playing: </span> style savvy: styling star, paranormasight</p>
+					<p><span class="title">watching: </span> the summer hikaru died, jojo (part 4)</p>
+					<p><span class="title">reading: </span> oddysey</p>
+					<p><span class="title">working on: </span> having fun @ uni</p>
+					<p class="date">last updated: 24.aug.25</p>
 				</section>
+				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
 				<section class="notepad-boxes" id="webrings">
 					<h3>webrings</h3>
 					<!-- code collective -->
