forgor something in the index

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -189,55 +189,55 @@ you're free to take whatever you need from my site, but please refrain from taki
 					<script src="https://electric-tenshi.nekoweb.org/vocaring/vocaring-widget.js"></script>
 
 					<!-- music ring -->
-					<div style="margin:auto;">
+					<!-- <div style="margin:auto;">
 						<a href="https://peanits.lol/webrings/musicring/index.php"><img src="https://peanits.lol/webrings/musicring/assets/button.gif"></a>
 						<br>
 						<a href="https://peanits.lol/webrings/musicring/prev.php?slug=doqmeat">prev</a>
 						<a href="https://peanits.lol/webrings/musicring/rand.php">rand</a>
 						<a href="https://peanits.lol/webrings/musicring/next.php?slug=doqmeat">next</a>
-						<br>
-						<!--			no AI webring-->
-						<map name="noaimini2">
-							<area href="https://baccyflap.com/noai" target="_blank" shape="rect" coords="5,3,83,14" alt="no ai webring" title="no ai webring">
-							<area href="https://baccyflap.com/noai/?prv&s=des" target="_top" shape="rect" coords="5,16,16,26" alt="previous" title="previous">
-							<area href="https://baccyflap.com/noai/?rnd" target="_top" shape="rect" coords="38,16,51,27" alt="random" title="random">
-							<area href="https://baccyflap.com/noai/?nxt&s=des" target="_top" shape="rect" coords="72,16,83,26" alt="next" title="next">
-						</map>
-						<img usemap="#noaimini2" src="https://baccyflap.com/noai/miniwidget2.gif" style="width: 88px; height: 31px" alt="a white rounded rectangle in red outline, with the words 'no ai webring'. there's a no access emoji, a little robot emoji, two arrows pointing left and right, and two crossed arrows">
+						<br> -->
+					<!--			no AI webring-->
+					<map name="noaimini2">
+						<area href="https://baccyflap.com/noai" target="_blank" shape="rect" coords="5,3,83,14" alt="no ai webring" title="no ai webring">
+						<area href="https://baccyflap.com/noai/?prv&s=des" target="_top" shape="rect" coords="5,16,16,26" alt="previous" title="previous">
+						<area href="https://baccyflap.com/noai/?rnd" target="_top" shape="rect" coords="38,16,51,27" alt="random" title="random">
+						<area href="https://baccyflap.com/noai/?nxt&s=des" target="_top" shape="rect" coords="72,16,83,26" alt="next" title="next">
+					</map>
+					<img usemap="#noaimini2" src="https://baccyflap.com/noai/miniwidget2.gif" style="width: 88px; height: 31px" alt="a white rounded rectangle in red outline, with the words 'no ai webring'. there's a no access emoji, a little robot emoji, two arrows pointing left and right, and two crossed arrows">
 
-						<!--		catfolk-->
-						<script src="https://snewberry.neocities.org/catfolk/webstring.js"></script>
+					<!--		catfolk-->
+					<script src="https://snewberry.neocities.org/catfolk/webstring.js"></script>
 
-						<!--		bisexualism-->
-						<div id="bisexualism">
-							<script type="text/javascript" src="https://emeowly.github.io/bi/onionring-variables.js" defer></script>
-							<script type="text/javascript" src="https://emeowly.github.io/bi/onionring-img-widget.js" defer></script>
-						</div>
+					<!--		bisexualism-->
+					<div id="bisexualism">
+						<script type="text/javascript" src="https://emeowly.github.io/bi/onionring-variables.js" defer></script>
+						<script type="text/javascript" src="https://emeowly.github.io/bi/onionring-img-widget.js" defer></script>
+					</div>
 
-						<!--				silly.city-->
-						<iframe src="https://silly.city/embed.html?user=doqmeat" title="silly.city webring" frameborder="no" width="100%" height="60px">
-						</iframe>
+					<!--				silly.city-->
+					<iframe src="https://silly.city/embed.html?user=doqmeat" title="silly.city webring" frameborder="no" width="100%" height="60px">
+					</iframe>
 
-						<!--			journalring -->
-						<journal-ring icon="lavender"></journal-ring>
-						<script async src="https://cdn.jsdelivr.net/gh/js044/nenrikido@main/static/js/misc/journalring.js"></script>
+					<!--			journalring -->
+					<journal-ring icon="lavender"></journal-ring>
+					<script async src="https://cdn.jsdelivr.net/gh/js044/nenrikido@main/static/js/misc/journalring.js"></script>
 
-						<!-- wiiring -->
-						<div style="width: 150px; margin: auto">
-							<script src="https://jeith.neocities.org/assets/webring/wii-ring.js"></script>
-							<wii-ring site="https://doqmeat.neocities.org"></wii-ring>
-						</div>
+					<!-- wiiring -->
+					<div style="width: 150px; margin: auto">
+						<script src="https://jeith.neocities.org/assets/webring/wii-ring.js"></script>
+						<wii-ring site="https://doqmeat.neocities.org"></wii-ring>
+					</div>
 
-						<!-- pikring -->
-						<div id="PikRing" style="margin: 5px 0px">
-							<link rel="stylesheet" href="https://nickolox.neocities.org/pikring/css/rock.css">
-							<script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-variables.js"></script>
-							<script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-widget.js"></script>
-						</div>
+					<!-- pikring -->
+					<div id="PikRing" style="margin: 5px 0px">
+						<link rel="stylesheet" href="https://nickolox.neocities.org/pikring/css/rock.css">
+						<script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-variables.js"></script>
+						<script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-widget.js"></script>
+					</div>
 
-						<p>
-							<object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#c999f0" type="image/svg+xml" style="width: 100px; height: 100px"></object>
-						</p>
+					<p>
+						<object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#c999f0" type="image/svg+xml" style="width: 100px; height: 100px"></object>
+					</p>
 				</section>
 				<section class="notepad-boxes" id="listings">
 					<h3>fanlistings</h3>
