updated featured music

--- a/doqmeat/music/mini-pages/featured.html
+++ b/doqmeat/music/mini-pages/featured.html
@@ -73,7 +73,26 @@
 
 		<details open>
 			<summary>
-				<span class="date">16.jul.25 - ? :</span> ruder buster / troy
+				<span class="date">09.sep.25 - ? :</span> 脚色 / facsimile
+			</summary>
+			<table>
+				<td class="t-left">
+					<p><b>脚色</b> - uki3/ewe</p>
+					<iframe width="864" height="486" src="https://www.youtube.com/embed/PyWik2QfWg4?list=PLXBN365J_wjUaks3AXkNG7P6Ts8ONr0FL" title="脚色" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>been a little bit obsessed with uki3/ewe as of late and this is the latest banger i've been having on repeat as of late.</p>
+				</td>
+				<td class="t-right">
+					<p><b>facsimile</b> - balloon/ewe</p>
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=mCDY9tQULTpMV5UM&amp;list=OLAK5uy_lGc-RqgZbXolfBDLQQldHvmlgSFzp35xs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					<p>the concept of rearranging each other songs in a compilation album is sooo cute. balloon's and uki3's contributions to each of their respective songs are so good and it's very nice to see that distinction between their sounds and how nicely they compliment each other. not only that but i also think the original songs included in this are a banger as well. overall a lovely project. i wish i could hear more stuff like this.</p>
+					<p><b>highlights:</b> taikou train (balloon arrange), felis, charles (ewe arrange)</p>
+				</td>
+			</table>
+		</details>
+
+		<details>
+			<summary>
+				<span class="date">16.jul.25 - 09.sep.25 :</span> ruder buster / troy
 			</summary>
 			<table>
 				<td class="t-left">
