--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,6 +68,7 @@
 
     <div id="updates" class="box">
       <h3>updates</h3>
+      <p><b>09.sep.25 - featured music updated :3</b></p>
       <p><b>28.jul.25</b> - 6 months later i wrote my <a href="recaps/2024/index.html" target="mainframe">2024 recap</a></p>
       <p><b>27.jul.25</b> - <a href="mini-pages/kpop-producers.html" target="mainframe">kpop producers</a> page is no longer a WIP :) need to add some more collaborators to songs but it is mostly done <small>for now since i will keep updating it with time.</small></p>
       <p><b>16.jul.25</b> - new featured music!</p>
@@ -92,15 +93,15 @@
     <div id="featured" class="box">
       <h3>featured song &amp; album</h3>
       <div class="song">
-        <h4><b>ruder buster</b> - toby fox</h4>
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/N117e1Ub39A?si=lPAEuU6iPJn7r7OB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <p>would yall believe me if i said that i almost started crying when i got to the <a href="https://youtu.be/N117e1Ub39A?si=JB3ELBuLSmA-mDLe&t=66" target="_blank" class="outlink">01:06</a> mark of this song... there is just something so so beautiful to me about the gorgeous development of this song. i think i kinda got emotional thinking about how far <b>toby fox</b> has gotten in his music after being a fan of his since the homestuck days. he really just keeps getting better and better huh... that's my goat right there.</p>
+        <h4><b>脚色</b> - uki3/ewe</h4>
+        <iframe width="864" height="486" src="https://www.youtube.com/embed/PyWik2QfWg4?list=PLXBN365J_wjUaks3AXkNG7P6Ts8ONr0FL" title="脚色" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>been a little bit obsessed with uki3/ewe as of late and this is the latest banger i've been having on repeat as of late.</p>
       </div>
       <div class="lp">
-        <h4><b>troy</b> - ukie3/ewe</h4>
-        <iframe style="border: 0; width: 250px; height: 392px; margin:auto; display:block" src="https://bandcamp.com/EmbeddedPlayer/album=3367247975/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/transparent=true/" seamless><a href="https://ewemusic01.bandcamp.com/album/troy">troy by uki3/ewe</a></iframe>
-        <p>solidddd vocaloid album!! has some very very fun electronic pieces sprinkled throughout it.</p>
-        <p><b>highlights:</b> ウエンディ, dancer in the dark, カフネ</p>
+        <h4><b>facsimile</b> - balloon/ewe</h4>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=mCDY9tQULTpMV5UM&amp;list=OLAK5uy_lGc-RqgZbXolfBDLQQldHvmlgSFzp35xs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>the concept of rearranging each other songs in a compilation album is sooo cute. balloon's and uki3's contributions to each of their respective songs are so good and it's very nice to see that distinction between their sounds and how nicely they compliment each other. not only that but i also think the original songs included in this are a banger as well. overall a lovely project. i wish i could hear more stuff like this.</p>
+        <p><b>highlights:</b> taikou train (balloon arrange), felis, charles (ewe arrange)</p>
       </div>
       <hr>
 
