--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -164,11 +164,11 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<p><span class="title">playing: </span> style savvy: styling star, paranormasight</p>
+					<p><span class="title">playing: </span> SILKSONG</p>
 					<p><span class="title">watching: </span> the summer hikaru died, jojo (part 4)</p>
 					<p><span class="title">reading: </span> oddysey</p>
 					<p><span class="title">working on: </span> having fun @ uni</p>
-					<p class="date">last updated: 24.aug.25</p>
+					<p class="date">last updated: 09.sep.25</p>
 				</section>
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
 				<section class="notepad-boxes" id="webrings">
