--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -45,7 +45,7 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 		</nav>
 
 		<main>
-			<iframe id="mainframe" src="2025/07.html?2507" name="log" height="100%" width="100%"></iframe>
+			<iframe id="mainframe" src="2025/09.html" name="log" height="100%" width="100%"></iframe>
 		</main>
 	</div>
 
