updating scrapbook n microblog

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -156,8 +156,9 @@ you're free to take whatever you need from my site, but please refrain from taki
 				</section>
 				<section class="notepad-boxes" id="now">
 					<h3>currently...</h3>
-					<!-- <p><span class="title">news: </span>
-					</p> -->
+					<p><span class="title">news: </span>
+						will be doing a workshop around CSS at my uni and i would love your <a title="neocities post" href="https://neocities.org/site/doqmeat?event_id=5666830" target="_blank">input!</a>
+					</p>
 
 					<p><span class="title">feeling: </span> <a href="https://www.imood.com/users/doqmeat"><img src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif" alt="The current mood of doqmeat at www.imood.com" border="0"></a></p>
 					<p><span class="title">status: </span>
