--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -77,6 +77,9 @@
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
 				<article>
+					<p><b>20.sep.25 - 9pm</b> i forgot to put these imgs on my latest journal log about the start of my august semester. during the first week of uni i got to have a look around for the first time at the student computer science association's office. they have lots of old books about various topics discussed in computer science and all of that and i was in awe at the covers some of these books had. i find them so cute and charming... <button onclick="showPic('!g/250920-compilers.png','compilers cover','cool af dragon for compilers')">compilers.png</button> <button onclick="showPic('!g/250920-programming-languages.png','programming languages cover','so cuteee this is me btw this is how i look like')">programming-languages.png</button></p>
+				</article>
+				<article>
 					<p><b>18.aug.25 - 10pm</b> been feeling a little bit weird lately... ah maybe i am a little bit nervous about starting a new semester. me the person that loves going to class and learning new things and taking notes... sigh. i gotta start doing more scary things. or at least things that *i* find scary to do. i haven't touched <a href="/vgs/games/bloodborne/index.html">bloodborne</a> in such a while and truth is that i got a bit scared of it ?!?! i would be so unstoppable if i wasn't like this. but i am like this nonetheless! just something i gotta work on. hopefully this new semester i will also work on my public speaking skills as well!</p>
 				</article>
 				<article>
@@ -369,8 +372,8 @@
 		</div>
 
 		<div class="draggable" id="picture-win">
-			<span id="picture-title"></span>
 			<button onclick="toggleclick('picture-win')" class="x">x</button>
+			<span id="picture-title"></span>
 			<br>
 			<a id="pic-link" title="open IMG in a new tab" href="" target="_blank"><img id="picture"></a>
 			<p id="picture-caption"></p>
