new minor update!

--- a/doqmeat/microblog/index.html
+++ b/doqmeat/microblog/index.html
@@ -30,6 +30,7 @@
 		<div id="note-1" class="notes">
 			<h3>things i'm frequently saying "there's nothing better in life than..." in my head</h3>
 			<ul>
+				<li>seeing your fridge full of food</li>
 				<li>butter toast</li>
 				<li>a nice cup of hot chocolate</li>
 				<li>being kissed</li>
@@ -37,7 +38,7 @@
 				<li>taking a nap alongside your cat</li>
 				<li>a nice hot bath</li>
 			</ul>
-			<small>last updated on <b>12.aug.25</b></small>
+			<small>last updated on <b>13.oct.25</b></small>
 		</div>
 	</div>
 
@@ -76,6 +77,9 @@
 			<section id="y2025">
 				<!-- new entry! -->
 				<!-- button format: 'img path','alt','desc' -->
+				<article>
+					<p><b>13.oct.25 - 8pm</b> i have been so tired lately!! the classes i am taking have been taking up so much of my free time. i haven't even been able to play more than 4hrs of <i>silksong</i> since it got released over a month ago! i am taking more classes this semester compared to past ones but man. i miss my free time <img src="/!g/pix/sad.gif" alt=""></p>
+				</article>
 				<article>
 					<p><b>20.sep.25 - 9pm</b> i forgot to put these imgs on my latest journal log about the start of my august semester. during the first week of uni i got to have a look around for the first time at the student computer science association's office. they have lots of old books about various topics discussed in computer science and all of that and i was in awe at the covers some of these books had. i find them so cute and charming... <button onclick="showPic('!g/250920-compilers.png','compilers cover','cool af dragon for compilers')">compilers.png</button> <button onclick="showPic('!g/250920-programming-languages.png','programming languages cover','so cuteee this is me btw this is how i look like')">programming-languages.png</button></p>
 				</article>
