--- a/doqmeat/fashion/index.html
+++ b/doqmeat/fashion/index.html
@@ -30,6 +30,7 @@
     </div>
     <div class="gallery">
       <h2 id="outfits">outfits</h2>
+      <img src="!g/fits/251013.png" class="fit-pic caption-pic" alt="a checkered green and dark blue shirt with baggy black pants" title="this shirt is kind of like a sweater i love it so much" tabindex="0">
       <img src="!g/fits/250403.png" alt="purple shirt with a puffy skirt" class="fit-pic caption-pic" title="i saw this skirt at my store and i IMMEDIATELY fell in love with it. i've never had a puffy skirt like this before. awesome." tabindex="0">
       <img src="!g/fits/250121.png" alt="white shirt with a silly cat and cream jeans" class="fit-pic caption-pic" title="love the shirt and the earrings a lot from this fit! i think they look so nice together" tabindex="0">
       <img class="fit-pic caption-pic" src="!g/fits/18.png" title="silly green fit" alt="overalls with a striped green and black shirt and a froggy hat" tabindex="0">
@@ -106,7 +107,7 @@
   </main>
 
   <footer>
-    <p>last updated: <b>20.jul.25</b></p>
+    <p>last updated: <b>13.oct.25</b></p>
     <p><a href="/">go back home?</a> / <a href="/sitemap">sitemap</a></p>
     <p><b>credit:</b> insp by ollie's <a href="https://olliveen.neocities.org/fashion" target="_blank">fashion page</a></p>
   </footer>
