minor changes to scrapbook n homepage

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -156,9 +156,8 @@ you're free to take whatever you need from my site, but please refrain from taki
 				</section>
 				<section class="notepad-boxes" id="now">
 					<h3>currently...</h3>
-					<p><span class="title">news: </span>
-						will be doing a workshop around CSS at my uni and i would love your <a title="neocities post" href="https://neocities.org/site/doqmeat?event_id=5666830" target="_blank">input!</a>
-					</p>
+					<!-- <p><span class="title">news: </span>
+					</p> -->
 
 					<p><span class="title">feeling: </span> <a href="https://www.imood.com/users/doqmeat"><img src="https://moods.imood.com/display/uname-doqmeat/trans-1/imood.gif" alt="The current mood of doqmeat at www.imood.com" border="0"></a></p>
 					<p><span class="title">status: </span>
@@ -166,10 +165,10 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-content"></span>
 					</p>
 					<p><span class="title">playing: </span> SILKSONG</p>
-					<p><span class="title">watching: </span> the summer hikaru died, jojo (part 4)</p>
+					<p><span class="title">watching: </span> jojo (part 4), smiling friends (season 3), fionna and cake (season 2)</p>
 					<p><span class="title">reading: </span> oddysey</p>
-					<p><span class="title">working on: </span> having fun @ uni</p>
-					<p class="date">last updated: 09.sep.25</p>
+					<p><span class="title">working on: </span> journal post!</p>
+					<p class="date">last updated: 30.oct.25</p>
 				</section>
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
 				<section class="notepad-boxes" id="webrings">
