--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -164,11 +164,11 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<p><span class="title">playing: </span> SILKSONG</p>
-					<p><span class="title">watching: </span> jojo (part 4), smiling friends (season 3), fionna and cake (season 2)</p>
+					<p><span class="title">playing: </span> n/a</p>
+					<p><span class="title">watching: </span> jojo (part 4), smiling friends (season 3), fionna and cake (season 2), pluribus</p>
 					<p><span class="title">reading: </span> oddysey</p>
-					<p><span class="title">working on: </span> journal post!</p>
-					<p class="date">last updated: 30.oct.25</p>
+					<p><span class="title">working on: </span> nothing at the moment!</p>
+					<p class="date">last updated: 14.nov.25</p>
 				</section>
 				<p id="notepad-notice">please turn on JS for this site omg... i promise i only use it for fun stuff.</p>
 				<section class="notepad-boxes" id="webrings">
