added 2 cat pics

--- a/doqmeat/collection/cats/index.html
+++ b/doqmeat/collection/cats/index.html
@@ -17,13 +17,13 @@
 <body>
 	<header>
 		<h1>my awesome cat collection (^・ω・^ )</h1>
-		<p>i love saving these little fellas on my puter.<br><small>currently in the process of linking to their sources and adding alt text to the imgs!</small> <img src="p-sakuraw.gif" alt=""> </p>
 	</header>
 
 	<div id="gallery">
 
 		<!--column 1-->
 		<div class="column">
+			<img src="!g/moth-tiger.jpg" alt="a tiger that is also a moth i think">
 			<video controls>
 				<source src="!g/the-blinker.mp4" type="video/mp4">
 			</video>
@@ -97,6 +97,7 @@
 
 		<!--column 3-->
 		<div class="column">
+			<img src="!g/cutie-hearts.gif" alt="cute cat">
 			<video controls>
 				<source src="!g/bubble.mp4" type="video/mp4">
 			</video>
@@ -141,7 +142,7 @@
 	<footer>
 		<img src="div1.gif" alt=""><img src="div.gif" alt=""><img src="div2.gif" alt="">
 		<br>
-		<b>last updated: 29.sep.24</b>
+		<b>last updated: 16.nov.25</b>
 		<br><br>
 		<b>credit:</b> page made with materials by <a href="http://tora7.ciao.jp" target="_blank">tora7.ciao.jp</a> / <a href="/notebook/resources/fonts.html">fonts</a> used: cat paw, momo
 
