--- a/doqmeat/music/fav-albums/index.html
+++ b/doqmeat/music/fav-albums/index.html
@@ -3,13 +3,11 @@
 
 <!-- coded with love by des. 
 -
-i used a BUNCH of resources for this page. 
-this is like a frankenstein monster of all these codes
--------------------
+17.nov.25 edit: i need to remake this page SO BADLY!!!!!
+--
 color palette: 
 https://coolors.co/946e45-ca5251-d97634-e1d751-8bb25a-80beb5-aad0c0
 -------------------- 
-------------------
 filter w/ buttons:
 https://www.w3schools.com/howto/howto_js_filter_elements.asp
 -->
@@ -49,6 +47,29 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 
 		<div id="lp-container">
 
+			<div class="filterDiv float wish">
+				<img src="pics/error-ep.jpg" alt="error ep modal">
+				<button title="error ep" class="btn" onclick="popup('error-ep')"></button>
+			</div>
+			<div id="error-ep" class="modal">
+				<div class="modal-content">
+					<div class="close"></div>
+					<h2>error - uki3 / ewe</h2>
+					<img src="pics/error-ep.jpg" width="40%" class="r-img">
+					<p>such a gorgeous and whimsical vocaloid piece. i love very much the exciting instrumentals some of these songs have while also keeping a very melancholic tone to them, specially via miku's tuning.</p>
+					<p>i found this album actually not even through the actual songs, i stumbled upon a <a href="https://www.youtube.com/watch?v=amKTSZEiYgs&list=OLAK5uy_mT6uib-qGjIcgHSAi2TCyr8s8qjQ_KvAs&index=2" target="_blank">version of this EP</a> that only has 3 instrumentals but even 1 of those instrumentals is for a version of the song <i>the woodpecker cries at night</i> that is NOT included in the EP... it came out as a <a href="https://youtu.be/HXHRYHEfRbw?si=M6U9E-vDTWk-N9_w" target="_blank">single</a> eventually though. regardless, i really enjoyed this version of the EP THINKING this was the main course. it wasn't. i later found out that what i had just listened were actually instrumentals for some of the songs for the ACTUAL EP.</p>
+					<p>but because of the encounter of it's instrumentals, i feel like i was able to appreciate this EP a little bit more. i really wish more artists put out more of their instrumentals out there without having to listen to someone trying their best on a music editing program trying to muffle out the vocals of the songs. i find it so satisfying to listen to instrumentals of my favorite songs. you literally start to hear things you didn't notice that were there. i think it's so awesome.</p>
+					<p>i really liked this when i first heard it and i kept going back to it with time. there is just something so gentle in here.the debut album of <u>uki3</u>, <b>troy</b>, is also similar in this sense. but to me, this EP really highlights what makes his sound so memorable.</p>
+					<p>i've tuned in into <u>uki3</u>'s other work under <b>yoh kamiyama</b> but it doesn't quite have that special charm that these vocaloid releases of his has. at least in my opinion. i still wanna keep tuning in into his work though. his stuff really is great.</p>
+					<p>i find the album art so cute as well! i also found it pretty interesting since there appears to be a screenshot of a terminal in the background that says "linux vine" but then the outer window is from windows so idk that kinda picked my curiosity. the art is so charming though. i will probably make fanart of this cover eventually i find the cat girl so adorable, love the colors on this as well.</p>
+					<p>but actually talking about computers, on it's first track, <i>error</i>, it immediately greats up with sound effects of someone typing and clicking on a computer. and it isn't til the very last click that miku starts to sing. so i guess that's why there's all that on the album cover.</p>
+					<hr>
+					<p>also has a side note: <b>balloon</b>'s <a href="https://youtu.be/ZYGm_v0OMvk" target="_blank">rearrangement</a> of <i>taikou train</i> is so fucking greatttttt.</p>
+					<p><b>fav songs:</b> blood and fish <img src="/!g/pix/staryellow.gif"> taikou train <img src="/!g/pix/staryellow.gif"> error</p>
+					<p><b>links:</b> <a href="https://ewemusic01.bandcamp.com/album/error-ep" target="_blank">bandcamp</a> / <a href="https://youtu.be/1IoAYkbNhks" target="_blank">youtube video</a></p>
+					<p><b>added on:</b> 17.nov.25</p>
+				</div>
+			</div>
 
 			<div class="filterDiv cd float">
 				<img src="pics/11100011.jpg" alt="11100011 modal">
@@ -610,7 +631,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 	<footer>
 		<img src="/!g/deco/iluvmusic.gif" align="left">
 		<img src="/!g/deco/jam.gif" align="right">
-		<b>last updated on 01.jul.25</b>
+		<b>last updated on 17.nov.25</b>
 		<br>
 		album scans in this page have all been scanned by me unless stated otherwise!
 		<br>
