--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -68,7 +68,8 @@
 
     <div id="updates" class="box">
       <h3>updates</h3>
-      <p><b>09.sep.25 - featured music updated :3</b></p>
+      <p><b>17.nov.25</b> - added a new album to my <a href="fav-albums/index.html">favs</a>: <i>error</i> by uki3 / ewe</p>
+      <p><b>09.sep.25</b> - featured music updated :3</p>
       <p><b>28.jul.25</b> - 6 months later i wrote my <a href="recaps/2024/index.html" target="mainframe">2024 recap</a></p>
       <p><b>27.jul.25</b> - <a href="mini-pages/kpop-producers.html" target="mainframe">kpop producers</a> page is no longer a WIP :) need to add some more collaborators to songs but it is mostly done <small>for now since i will keep updating it with time.</small></p>
       <p><b>16.jul.25</b> - new featured music!</p>
