--- a/doqmeat/art/index.html
+++ b/doqmeat/art/index.html
@@ -26,8 +26,8 @@
       <summary>tools</summary>
       <h4>digital</h4>
       <ul>
-        <li>clip studio paint</li>
-        <li>HP convertible laptop w/ stylus</li>
+        <li>clip studio paint, HP convertible laptop w/ stylus</li>
+        <li>flipnote studio, 3DS</li>
       </ul>
       <h4>traditional</h4>
       <ul>
@@ -59,13 +59,17 @@
     <hr>
     <center>
       <p><a href="#">top</a> / <a href="/">home</a> / <a href="/sitemap">sitemap</a></p>
-      <p>last updated on 27.jul.25</p>
+      <p>last updated on 16.nov.25</p>
       <p><b>credit:</b> <a href="/notebook/resources/fonts.html">fonts</a> used: momo, basiic</p>
     </center>
   </aside>
 
   <main>
-    <img id="rainbowcat" src="!g/drawings/250727-rainbow-meow.png" alt="a rainbow cat" class="box 2025 doodle" loading="lazy">
+    <img id="power-curled-up" class="box digital 2025 doodle" src="!g/drawings/250517-3ds-power.JPG" alt="power curled up in a ball" loading="lazy">
+    <div id="power-curled-up-caption" class="captions">
+      <p>drew this when the power went out for a few hours and i was kinda sad about it so i drew power from memory all curled up with meowy.</p>
+    </div>
+    <img id="rainbowcat" src="!g/drawings/250727-rainbow-meow.png" alt="a rainbow cat" class="box digital 2025 doodle" loading="lazy">
     <div id="rainbowcat-caption" class="captions">
       <p>a rainbow cat i did for more portfolio-ish site of mine! :p</p>
     </div>
