--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -73,11 +73,11 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<h3>personal</h3>
 			<a class="p" href="/about">about</a>
 			<a class="p" href="/photobook">photobook</a>
-			<a class="p" href="/journal">journal</a>
+			<a class="p" href="/journal">journal <img src="!g/pix/updated1.gif" alt="page updated"></a>
 			<a class="p" href="/microblog">microblog</a>
-			<a class="p" href="/blog">blog <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="p" href="/blog">blog</a>
 			<a class="p" href="/fashion">fashion</a>
-			<a class="p" href="/scrapbook">scrapbook <img src="!g/pix/updated1.gif" alt="page updated"></a>
+			<a class="p" href="/scrapbook">scrapbook</a>
 			<a class="p" href="/shrines">shrines</a>
 			<a class="p" href="/collection">collections</a>
 			<a class="p" href="/art">art &amp; crafts</a>
