--- a/doqmeat/about/index.html
+++ b/doqmeat/about/index.html
@@ -360,12 +360,9 @@
 				you can find me in other places like...
 				<a title="e-mail me!" href="mailto:&#x6d;&#x65;&#x6f;&#x77;&commat;&#x64;&#x6f;&#x71;&#x6d;&#x65;&#x61;&#x74;&period;&#x63;&#x6f;&#x6d;"><img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;"></a>
 				<li><a title="all of my projects have repositories here!" href="https://github.com/doqmeat" target="_blank">github</a></li>
+				<li><a title="twitter 2.0" href="https://bsky.app/profile/doqmeat.com" target="_blank">bsky</a></li>
 				<li><a title="here til the site gets inevitably nuked" href="https://twitter.com/sepiarecord999" target="_blank">twitter</a></li>
-				<li><a title="i LOVE logging on what i listen to" href="https://rateyourmusic.com/~doqmeat" target="_blank">rate your music</a></li>
-				<li><a title="i LOVE logging on what i watch" href="https://letterboxd.com/doqmeat/" target="_blank">letterboxd</a></li>
-				<li><a title="i LOVE logging on what i play" href="https://backloggd.com/u/doqmeat/" target="_blank">backloggd</a></li>
 				<li><a href="https://doqmeats.tumblr.com/" target="_blank">tumblr</a></li>
-				<li><a title="i upload stuff every now and then" href="https://www.youtube.com/@doqmeat" target="_blank">youtube</a></li>
 				<li><a title="you can support me here!" href="https://ko-fi.com/doqmeat" target="_blank">ko-fi</a></li>
 			</div>
 		</div>
