--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -56,6 +56,14 @@ coded with love by des
 -->
 
 		<div class="pic phone">
+			<img src="!g/251128-mushrooms (2).jpg" alt="mushroom">
+			<img src="!g/251128-mushrooms (1).jpg" alt="mushroom">
+			<div class="hov">
+				<p class="caption">a lovely mushroom i saw while walking my cat</p>
+			</div>
+		</div>
+
+		<div class="pic phone">
 			<img src="!g/250923-alyssum-1.jpeg" alt="assylum">
 			<img src="/scrapbook/2025/250920-alyssum-3.jpg" alt="assylum">
 			<div class="hov">
@@ -538,7 +546,7 @@ coded with love by des
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 23.sep.25</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 28.nov.25</b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a> / border-img from <a href="https://fujoshi.nekoweb.org" target="_blank">mimi</a>!
 		<br>
