--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -350,7 +350,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 		<h3>chatbox rules &amp; notes:</h3>
 		<ol>
 			<li>spam and rude messages get deleted (ˉ▽ˉ；)...</li>
-			<li>you can send any serious inquiries via e-mail</li>
+			<li>you can send any serious inquiries via e-mail at meow@doqmeat.com</li>
 			<li>thank you all for the nice messages!</li>
 			<li>(o゜▽゜)o☆ have fun</li>
 		</ol>
@@ -358,7 +358,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 		<button id="dialog-disagree" onclick="chatPopup('nope')">no, i don't agree...</button>
 	</dialog>
 
-	<script src="!f/v5/script.js?1124"></script>
+	<script src="!f/v5/script.js?1130"></script>
 	<script src="!f/v5/last-fm.js?0613"></script>
 	<script src="https://status.cafe/current-status.js?name=doqmeat" defer></script>
 </body>
