added button for vgen

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -337,6 +337,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<img src="/collection/internet-graphics/!g/dontfeedai.gif" alt="don't feed the AI!">
 			<a href="http://validator.w3.org/feed/check.cgi?url=https%3A//doqmeat.com/rss.xml" target="_blank"><img src="/notebook/tutorials/rss/valid.png" alt="valid rss" title="Validate my RSS feed"></a>
 			<a href="https://ko-fi.com/doqmeat" target="_blank"><img src="/notebook/!g/ko-fi-template-red.png" alt="support me ko-fi button"></a>
+			<a href="https://vgen.co/doqmeat/" target="_blank"><img src="!f/v5/assets/vgen.png" alt="vgen commissions and shop"></a>
 			<br><br>
 			<img title="this little guy has been with me since the very beggining of this site, dedicated space for minecraft cat plush" src="!f/v5/assets/plush.png" width="100px" alt="minecraft cat plushie" style="image-rendering: pixelated;">
 			<br>
